--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "machinepack-firebase",
   "version": "3.1.1",
-  "description": "This machinepack lets you commuicate with the Firebase API to store and sync your data in realtime.",
+  "description": "Structured Node.js bindings for Firebase.",
   "scripts": {
     "test": "node ./node_modules/test-machinepack-mocha/bin/testmachinepack-mocha.js"
   },
