--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test-machinepack-mocha": "2.1.7"
   },
   "machinepack": {
-    "iconSrc": "https://s3-us-west-1.amazonaws.com/machinepack-icons/machinepack_firebase.png",
+    "iconSrc": "https://avatars0.githubusercontent.com/u/1335026",
     "friendlyName": "Firebase",
     "machineDir": "machines/",
     "machines": [
